# Gemma3n-Impact-Hackathon

./: .example-env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
assets/: SystemArch.drawio
src/: audio_transcription.py  config.py  query_engine.py  response_structures.py  routing_agent.py  structured_prompt.py
vector_store/YOLOv7/: default__vector_store.json  docstore.json  index_store.json
