[project]
name = "gemma3n-impact-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.0.15",
    "faster-whisper>=1.1.1",
    "gradio>=4.44.1",
    "gradio-pdf>=0.0.22",
    "llama-index>=0.12.49",
    "llama-index-embeddings-clip>=0.4.0",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-readers-file>=0.4.8",
    "llama-index-vector-stores-chroma>=0.4.1",
    "numpy>=2.0.2",
    "pillow>=10.4.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "torch>=2.7.1",
    "transformers>=4.53.2",
]
